--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.7.5"
   }
 }
